Sites page: Reduce layout jiggling on start/stop, prevent hyphenated URLs from wrapping.

--- a/bundles/org.eclipse.orion.client.core/web/sites/sites.css
+++ b/bundles/org.eclipse.orion.client.core/web/sites/sites.css
@@ -47,6 +47,14 @@ tr.treeTableRow td:first-child {
 	padding: 16px 0 0 16px;
 }
 
+.urlCol {
+	width: 300px;
+}
+
+.siteURL {
+	white-space: nowrap;
+}
+
 .siteConfigDetails {
 	padding-left: 16px;
 }
